Enhance json based entity management library